test_src/compiler_errors/types/auto/AutoError3.b
class AutoError3 {
    void test(auto x) {
        println(x);
    }
}
